# gmessanger

./: meson.build
include/: gmessanger.h  greceiver.h  meson.build
src/: gmessanger.c  greceiver.c  meson.build
test/: meson.build  test-gmessanger.c  test-receiver-obj-a.c  test-receiver-obj-a.h  test-receiver-obj-b.c  test-receiver-obj-b.h
