messanger_sources = ['gmessanger.c', 'greceiver.c']

libgmessanger = shared_library('gmessanger',
                               messanger_sources,
                               include_directories : inc,
                               dependencies : glib_dep,
                               install : true)
